--- a/css/style.css
+++ b/css/style.css
@@ -260,20 +260,30 @@ footer .container {
     border-radius: 4px;
     margin: 15px 0;
     font-size: 1.1rem;
+    font-style: italic;
+    font-weight: bold;
+    cursor : pointer;
 }
-
+summary:hover {
+    background-color: #ff831d;
+    cursor: pointer;
+    transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+}
+summary:not(hover){
+    background-color: #0056b3;
+    cursor: pointer;
+    transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
 .course-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px;
+    display: block;
 }
-
 .course-card {
     background-color: white;
     border-radius: 8px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-    padding: 20px;
+    padding: 15px;
     transition: transform 0.3s;
+    margin-bottom: 10px;
 }
 
 .course-card:hover {
@@ -283,6 +293,13 @@ footer .container {
 .course-card h4 {
     color: #0056b3;
     margin-bottom: 10px;
+    cursor: pointer;
+}
+.document-list {
+    display: none;
+}
+.course-card.open .document-list {
+    display: block;
 }
 
 .document-list {
