--- a/css/style.css
+++ b/css/style.css
@@ -324,8 +324,8 @@ footer .container {
 }
 
 .year-section {
-    margin-bottom: 20px;
-    margin-top: 10px;
+    max-width: 60%;
+    margin: 15px auto;
 }
 .year-navigation{
     display : block;
@@ -448,10 +448,10 @@ details:not([open]) .course-list {
 
 }
 .course-card.open .document-list {
-    max-height: 200px; /* Further reduced height */
-    overflow-y: auto; /* Make it scrollable */
+    max-height: 200px;
+    overflow-y: auto;
     opacity: 1;
-    width: 100%; /* Ensure it fits within the card */
+    width: 100%;
 }
 
 .document-item {
@@ -483,7 +483,9 @@ details:not([open]) .course-list {
     .menu-toggle {
         display: block;
     }
-
+    .year-section{
+        max-width: 100%;
+    }
     nav {
         position: absolute;
         top: 88px;
