--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
     --parcolor : white;
     --h4color: white;
     --h2color : white;
-    --btncolor: #0E2148;
+    --btncolor: #bb6931;
     --bordercard: #7965C1;
     --yearsection: #40387a;
     --semestersection: #433D8B;
