--- a/css/style.css
+++ b/css/style.css
@@ -126,22 +126,19 @@ ul {
 
 .btn {
     display: inline-block;
-    background-color: var(--btncolor);
-    color: white;
+    color: var(--text-color);
     padding: 10px 18px;
-    border-radius: 30px;
+    border-radius: 20px;
     font-size: 0.95rem;
     transition: all 0.3s;
     margin: 10px 0;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    border: none;
+    border: 1px solid var(--btncolor);
     font-weight: 600;
     letter-spacing: 0.5px;
 }
-
 .btn:hover {
-    background-color: #003d7a;
-    transform: translateY(-3px);
+    transform: translateY(-2px);
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
 }
 
@@ -352,21 +349,25 @@ nav a:hover, nav a.active {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
-    margin-top: 40px;
+    gap: 20px;
+    margin-top: 20px;
 }
 
 .branch {
     background-color: var(--card-bg);
     border-radius: 15px;
     box-shadow: 0 10px 30px var(--shadow-color);
-    padding: 30px;
-    width: 260px;
+    padding: 20px;
+    width: 300px;
+    height : 123px;
     transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
     border-bottom: 5px solid transparent;
     position: relative;
     overflow: hidden;
+    display: inline-block;
+    text-align: left;
 }
+
 
 .branch::before {
     content: '';
@@ -387,20 +388,24 @@ nav a:hover, nav a.active {
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
     border-bottom: 5px solid var(--borderbottom);
 }
-
+.branch i {
+    color: var(--btncolor);
+    position: absolute;
+    top: 20px;
+    right: 20px;
+}
 .branch:hover::before {
     transform: scaleX(1);
 }
 
 .branch h3 {
     color: var(--h2color);
-    margin-bottom: 12px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 700;
 }
 
 .branch p {
-    margin-bottom: 20px;
+    display: block;
     font-size: 0.95rem;
     color: var(--parcolor);
     line-height: 1.5;
@@ -589,9 +594,11 @@ details:not([open]) .course-list {
     background-color: var(--card-bg);
     border-left: 4px solid #0056b3;
     padding: 15px 20px;
-    margin-bottom: 30px;
+
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+    max-width: 60%;
+    margin: 20px auto;
 }
 
 .course-card:hover {
@@ -702,7 +709,7 @@ details:not([open]) .course-list {
         display: none;
     }
 
-    .info-box{
+    .info-box , .about-me {
         max-width: 100%;
         margin: 20px auto;
     }
