--- a/css/style.css
+++ b/css/style.css
@@ -684,6 +684,52 @@ details:not([open]) .course-list {
 .document-item a:hover {
     color: #0056b3;
 }
+.carousel-container{
+    align-items: center;
+    justify-content: center;
+    overflow : hidden;
+    max-width : 60%;
+    margin : 0 auto;
+    padding : 20px 0;
+    position: relative;
+}
+#prev-btn , #next-btn {
+    border : none;
+    color : var(--borderleft);
+    cursor : pointer;
+    font-size : 1rem;
+    background-color: transparent;
+    padding : 0 10px;
+}
+.carousel-nav {
+    overflow : hidden;
+    display : flex;
+    width : 100%;
+}
+.carousel {
+    display : flex;
+    transition : transform 0.5s ease-in-out;
+}
+.slide {
+    width: 100%;
+    flex-shrink: 0;
+    padding: 16px 8px;
+    box-sizing: border-box;
+    overflow: hidden;
+}
+.slide p{
+    text-align: center;
+    font-size: 0.95rem;
+    color: var(--parcolor);
+    line-height: 1.5;
+    max-width: 90%;
+    font-weight: 500;
+    margin: 0 auto;
+    word-break: break-word;
+}
+
+
+
 @media(max-width: 1000px){
     .logo p {
         display: none;
@@ -695,11 +741,28 @@ details:not([open]) .course-list {
     header {
         width: 90%
     }
+    .carousel-container{
+        max-width: 60%;
+    }
+    .slide {
+        padding: 10px 4px;;
+    }
+    .slide p {
+        font-size: 0.9rem;
+        max-width: 80%;
+    }
+
     .menu-toggle {
         display: block;
     }
+
     .year-section{
         max-width: 100%;
+    }
+
+    .year-navigation {
+        display : grid;
+        padding : 0 30px;
     }
 
     .logo p {
@@ -763,7 +826,18 @@ details:not([open]) .course-list {
     .hero h2 {
         font-size: 1.5rem;
     }
-
+    .carousel-container {
+        max-width: 95%;
+        margin : 0 20px;
+    }
+    .slide {
+        padding: 10px 4px;
+    }
+    .slide p {
+        font-size: 0.85rem;
+        max-width: 70%;
+        line-height: 1.4;
+    }
 }
 @media (min-width:1024px) {
     header {
